# SLAM-backend-tutorial

./: Dockerfile  README.md
slam_tutorial/: CMakeLists.txt
slam_tutorial-solution/: package.xml
slam_tutorial-solution/data/: constraints.csv  optimized_poses.csv
slam_tutorial-solution/matlab/: plot_poses.m
slam_tutorial-solution/src/: ceres_spg.cpp  gtsam_spg.cpp
slam_tutorial/data/: initial_poses.csv  optimized_poses.csv
slam_tutorial/matlab/: visualize_results.m
slam_tutorial/src/: ceres_spg.cpp  gtsam_spg.cpp
