<?xml version="1.0"?>
<package format="2">
  <name>slam_tutorial</name>
  <version>0.0.0</version>
  <description>The slam_tutorial package</description>

  <maintainer email="weikunz@andrew.cmu.edu">Weikun Zhen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
